--- a/.github/workflows/update_resume.yml
+++ b/.github/workflows/update_resume.yml
@@ -2,8 +2,8 @@ name: Update HH Resume
 
 on:
   schedule:
-    - cron: "0 */4 * * *"  # Запуск каждые 4 часа
-  workflow_dispatch:       # Возможность ручного запуска через интерфейс
+    - cron: "0 */4 * * *"  # Run every 4 hours
+  workflow_dispatch:       # Manual trigger option
 
 jobs:
   update-resume:
@@ -25,5 +25,6 @@ jobs:
           HH_CLIENT_SECRET: ${{ secrets.HH_CLIENT_SECRET }}
           HH_REFRESH_TOKEN: ${{ secrets.HH_REFRESH_TOKEN }}
           HH_RESUME_IDS: ${{ secrets.HH_RESUME_IDS }}
-          HH_ACCESS_TOKEN: ${{ secrets.HH_ACCESS_TOKEN }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: python update_resume.py
