--- a/.github/workflows/update_resume.yml
+++ b/.github/workflows/update_resume.yml
@@ -25,6 +25,7 @@ jobs:
           HH_CLIENT_SECRET: ${{ secrets.HH_CLIENT_SECRET }}
           HH_REFRESH_TOKEN: ${{ secrets.HH_REFRESH_TOKEN }}
           HH_RESUME_IDS: ${{ secrets.HH_RESUME_IDS }}
+          HH_ACCESS_TOKEN: ${{ secrets.HH_ACCESS_TOKEN }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: python update_resume.py
