--- a/.github/workflows/check_and_update_resume.yml
+++ b/.github/workflows/check_and_update_resume.yml
@@ -114,7 +114,9 @@ jobs:
           print('🚀 Запускаем обновление резюме...')
           
           # Уведомляем о старте процесса обновления
-          current_time = datetime.now().strftime("%%d.%%m.%%Y %%H:%%M:%%S")
+          # Используем альтернативный способ форматирования даты и времени
+          today = datetime.now()
+          current_time = f"{today.day:02d}.{today.month:02d}.{today.year} {today.hour:02d}:{today.minute:02d}:{today.second:02d}"
           info_msg = f'🚀 <b>Запуск обновления резюме</b>\n\n🕒 Время: {current_time}'
           send_telegram_message(info_msg)
           
@@ -129,7 +131,9 @@ jobs:
               print(msg)
               # Сообщение отправит сам скрипт update_resume.py
           except subprocess.CalledProcessError as e:
-              current_time = datetime.now().strftime("%%d.%%m.%%Y %%H:%%M:%%S")
+              # Используем такой же способ форматирования даты для сообщения об ошибке
+              today = datetime.now()
+              current_time = f"{today.day:02d}.{today.month:02d}.{today.year} {today.hour:02d}:{today.minute:02d}:{today.second:02d}"
               msg = f'❌ Ошибка при выполнении скрипта: {str(e)}\n\n🕒 Время: {current_time}'
               print(f'❌ Ошибка при выполнении скрипта: {str(e)}')
               send_telegram_message(msg)
