--- a/.github/workflows/check_and_update_resume.yml
+++ b/.github/workflows/check_and_update_resume.yml
@@ -114,9 +114,15 @@ jobs:
           print('🚀 Запускаем обновление резюме...')
           
           # Уведомляем о старте процесса обновления
-          # Используем альтернативный способ форматирования даты и времени
+          # Используем базовый способ форматирования без специальных символов
           today = datetime.now()
-          current_time = f"{today.day:02d}.{today.month:02d}.{today.year} {today.hour:02d}:{today.minute:02d}:{today.second:02d}"
+          day = str(today.day).zfill(2)
+          month = str(today.month).zfill(2)
+          year = today.year
+          hour = str(today.hour).zfill(2)
+          minute = str(today.minute).zfill(2)
+          second = str(today.second).zfill(2)
+          current_time = f"{day}.{month}.{year} {hour}:{minute}:{second}"
           info_msg = f'🚀 <b>Запуск обновления резюме</b>\n\n🕒 Время: {current_time}'
           send_telegram_message(info_msg)
           
@@ -133,7 +139,13 @@ jobs:
           except subprocess.CalledProcessError as e:
               # Используем такой же способ форматирования даты для сообщения об ошибке
               today = datetime.now()
-              current_time = f"{today.day:02d}.{today.month:02d}.{today.year} {today.hour:02d}:{today.minute:02d}:{today.second:02d}"
+              day = str(today.day).zfill(2)
+              month = str(today.month).zfill(2)
+              year = today.year
+              hour = str(today.hour).zfill(2)
+              minute = str(today.minute).zfill(2)
+              second = str(today.second).zfill(2)
+              current_time = f"{day}.{month}.{year} {hour}:{minute}:{second}"
               msg = f'❌ Ошибка при выполнении скрипта: {str(e)}\n\n🕒 Время: {current_time}'
               print(f'❌ Ошибка при выполнении скрипта: {str(e)}')
               send_telegram_message(msg)
