--- a/.github/workflows/check_and_update_resume.yml
+++ b/.github/workflows/check_and_update_resume.yml
@@ -14,12 +14,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.12'
           
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests python-dotenv
+          pip install requests==2.32.2 python-dotenv==1.0.0
 
       - name: Check last run and update if needed
         env:
