--- a/.github/workflows/check_and_update_resume.yml
+++ b/.github/workflows/check_and_update_resume.yml
@@ -38,57 +38,49 @@ jobs:
           import time
           from datetime import datetime, timedelta, timezone
           
-          # Функция для отправки сообщений в Telegram
           def send_telegram_message(text):
               token = os.environ.get('TG_BOT_TOKEN')
               chat_id = os.environ.get('TG_CHAT_ID')
               if not token or not chat_id:
-                  print('ℹ️ Telegram переменные не заданы — пропускаем отправку.')
                   return
               url = f'https://api.telegram.org/bot{token}/sendMessage'
               payload = {
                   'chat_id': chat_id, 
                   'text': text,
-                  'parse_mode': 'HTML'  # Включаем поддержку HTML-форматирования
+                  'parse_mode': 'HTML'
               }
               try:
                   requests.post(url, data=payload)
-              except Exception as e:
-                  print(f'⚠️ Ошибка при отправке в Telegram: {e}')
+              except Exception:
+                  pass
           
-          # Получаем информацию о последних workflow runs
           token = os.environ.get('GITHUB_TOKEN')
           repo = os.environ.get('GITHUB_REPOSITORY')
           
-          # Ищем историю запусков текущего workflow
           headers = {
               'Authorization': f'token {token}',
               'Accept': 'application/vnd.github.v3+json'
           }
           
           url = f'https://api.github.com/repos/{repo}/actions/runs'
-          params = {'per_page': 30}  # Получаем последние 30 запусков
+          params = {'per_page': 30}
               
           response = requests.get(url, headers=headers, params=params)
           
           if response.status_code != 200:
-              print(f'❌ Ошибка при получении истории запусков: {response.status_code}')
-              print(response.text)
               exit(1)
           
-          # Находим последний успешный запуск с обновлением резюме
           runs = response.json().get('workflow_runs', [])
           successful_runs = [
               run for run in runs 
               if run['conclusion'] == 'success'
           ]
           
-          min_interval = timedelta(hours=4, minutes=1)  # 4 часа и 1 минута
-          now = datetime.now(timezone.utc)  # Используем timezone-aware datetime
+          min_interval = timedelta(hours=4, minutes=1)
+          now = datetime.now(timezone.utc)
           
           if successful_runs:
               last_success = successful_runs[0]
-              # GitHub API возвращает время в UTC
               last_success_time = datetime.strptime(
                   last_success['updated_at'], 
                   '%Y-%m-%dT%H:%M:%SZ'
@@ -97,79 +89,19 @@ jobs:
               time_since_last = now - last_success_time
               
               if time_since_last < min_interval:
-                  # Еще не прошло достаточно времени
-                  elapsed_minutes = time_since_last.total_seconds() / 60
-                  remaining_minutes = (min_interval.total_seconds() / 60) - elapsed_minutes
-                  
-                  print(f'⏳ Информация о времени:')
-                  print(f'- Текущее время (UTC): {now}')
-                  print(f'- Последнее обновление (UTC): {last_success_time}')
-                  print(f'- Прошло минут: {elapsed_minutes:.1f}')
-                  print(f'- Осталось ждать: {remaining_minutes:.1f} минут')
-                  
-                  # Не отправляем сообщение в Telegram для экономии уведомлений
-                  exit(0)  # Выходим без ошибки, но и без запуска обновления
-          else:
-              print('ℹ️ Не найдено предыдущих успешных запусков')
+                  exit(0)
           
-          # Если дошли сюда, значит прошло достаточно времени или нет успешных запусков
-          print('✅ Прошло достаточно времени с последнего успешного обновления')
-          print(f'- Текущее время (UTC): {now}')
-          if successful_runs:
-              print(f'- Последнее обновление (UTC): {last_success_time}')
-              print(f'- Прошло минут: {time_since_last.total_seconds() / 60:.1f}')
+          send_telegram_message('🚀 <b>Запуск обновления резюме</b>')
           
-          print('🚀 Запускаем обновление резюме...')
-          
-          # Уведомляем о старте процесса обновления без даты/времени
-          info_msg = '🚀 <b>Запуск обновления резюме</b>'
-          send_telegram_message(info_msg)
-          
-          # Запускаем скрипт напрямую
           import subprocess
-          print('🔄 Выполняем скрипт обновления резюме')
-          
-          # Добавляем отладочную информацию
-          print('🔍 Проверяем переменные окружения:')
-          client_id = os.environ.get("HH_CLIENT_ID", "")
-          print(f'HH_CLIENT_ID: {"*" * len(client_id)}')
-          client_secret = os.environ.get("HH_CLIENT_SECRET", "")
-          print(f'HH_CLIENT_SECRET: {"*" * len(client_secret)}')
-          refresh_token = os.environ.get("HH_REFRESH_TOKEN", "")
-          print(f'HH_REFRESH_TOKEN: {"*" * len(refresh_token)}')
-          resume_ids = os.environ.get("HH_RESUME_IDS", "не задан")
-          print(f'HH_RESUME_IDS: {resume_ids}')
-          access_token = os.environ.get("HH_ACCESS_TOKEN", "")
-          print(f'HH_ACCESS_TOKEN: {"*" * len(access_token)}')
-          bot_token = os.environ.get("TG_BOT_TOKEN", "")
-          print(f'TG_BOT_TOKEN: {"*" * len(bot_token)}')
-          chat_id = os.environ.get("TG_CHAT_ID", "не задан")
-          print(f'TG_CHAT_ID: {chat_id}')
-          
           try:
-              # Запускаем основной скрипт с выводом stdout и stderr
               result = subprocess.run(
                   ['python', 'update_resume.py'],
                   check=True,
                   capture_output=True,
                   text=True
               )
-              print('📝 Вывод скрипта:')
-              print(result.stdout)
-              if result.stderr:
-                  print('⚠️ Ошибки скрипта:')
-                  print(result.stderr)
-              msg = '✅ Скрипт обновления успешно выполнен'
-              print(msg)
-              # Сообщение отправит сам скрипт update_resume.py
           except subprocess.CalledProcessError as e:
-              msg = f'❌ Ошибка при выполнении скрипта: {str(e)}'
-              print(f'❌ Ошибка при выполнении скрипта: {str(e)}')
-              print('📝 Вывод скрипта:')
-              print(e.stdout)
-              if e.stderr:
-                  print('⚠️ Ошибки скрипта:')
-                  print(e.stderr)
-              send_telegram_message(msg)
+              send_telegram_message(f'❌ Ошибка при выполнении скрипта: {str(e)}')
               exit(1)
           "
