Возврат к простой рабочей версии workflow

--- a/.github/workflows/check_and_update_resume.yml
+++ b/.github/workflows/check_and_update_resume.yml
@@ -32,95 +32,4 @@ jobs:
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          python -c "
-          import requests
-          import os
-          import time
-          from datetime import datetime, timedelta, timezone
-          
-          def send_telegram_message(text):
-              token = os.environ.get('TG_BOT_TOKEN')
-              chat_id = os.environ.get('TG_CHAT_ID')
-              if not token or not chat_id:
-                  return
-              url = f'https://api.telegram.org/bot{token}/sendMessage'
-              payload = {
-                  'chat_id': chat_id, 
-                  'text': text,
-                  'parse_mode': 'HTML'
-              }
-              try:
-                  requests.post(url, data=payload)
-              except Exception:
-                  pass
-          
-          token = os.environ.get('GITHUB_TOKEN')
-          repo = os.environ.get('GITHUB_REPOSITORY')
-          
-          headers = {
-              'Authorization': f'token {token}',
-              'Accept': 'application/vnd.github.v3+json'
-          }
-          
-          url = f'https://api.github.com/repos/{repo}/actions/runs'
-          params = {'per_page': 30}
-              
-          response = requests.get(url, headers=headers, params=params)
-          
-          if response.status_code != 200:
-              exit(1)
-          
-          runs = response.json().get('workflow_runs', [])
-          successful_runs = [
-              run for run in runs 
-              if run['conclusion'] == 'success'
-          ]
-          
-          min_interval = timedelta(hours=4, minutes=1)
-          now = datetime.now(timezone.utc)
-          
-          if successful_runs:
-              last_success = successful_runs[0]
-              last_success_time = datetime.strptime(
-                  last_success['updated_at'], 
-                  '%Y-%m-%dT%H:%M:%SZ'
-              ).replace(tzinfo=timezone.utc)
-              
-              time_since_last = now - last_success_time
-              
-              if time_since_last < min_interval:
-                  exit(0)
-          
-          # Проверяем наличие критических переменных окружения
-          required_vars = ['HH_CLIENT_ID', 'HH_CLIENT_SECRET', 'HH_REFRESH_TOKEN', 'HH_RESUME_IDS']
-          missing_vars = [var for var in required_vars if not os.environ.get(var)]
-          if missing_vars:
-              missing_vars_str = ", ".join(missing_vars)
-              print("Missing required environment variables: " + missing_vars_str)
-              send_telegram_message("❌ Отсутствуют обязательные переменные окружения: " + missing_vars_str)
-              exit(1)
-          
-          send_telegram_message('🚀 <b>Запуск обновления резюме</b>')
-          
-          import subprocess
-          try:
-              result = subprocess.run(
-                  ['python', 'update_resume.py'],
-                  check=True,
-                  capture_output=True,
-                  text=True
-              )
-              # Логируем вывод скрипта
-              if result.stdout:
-                  print(result.stdout)
-              if result.stderr:
-                  print(result.stderr)
-          except subprocess.CalledProcessError as e:
-              print(f'Script error: {str(e)}')
-              print('Script output:')
-              print(e.stdout)
-              print('Script errors:')
-              print(e.stderr)
-              send_telegram_message(f'❌ Ошибка при выполнении скрипта: {str(e)}')
-              exit(1)
-          "
+          python update_resume.py
