Изменено расписание запуска на каждые 4 часа и 1 минуту вместо каждых 30 минут

--- a/.github/workflows/check_and_update_resume.yml
+++ b/.github/workflows/check_and_update_resume.yml
@@ -2,7 +2,7 @@ name: Check and Update HH Resume
 
 on:
   schedule:
-    - cron: "*/30 * * * *"  # Проверка каждые 30 минут
+    - cron: "1 */4 * * *"  # Запуск на 1-й минуте каждые 4 часа
   workflow_dispatch:        # Возможность ручного запуска
 
 jobs:
